Update and rename Una-despedida.index.html to index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <h1>Bienvenidos a "Una despedida"</h1>
-    <img src="GYCP2QDWMAAymFD.jpg" alt="Descripción de la imagen">
+    <img src="https://raw.githubusercontent.com/charcodetierra/-una-despedida-/main/GYCP2QDWMAAymFD.jpg" alt="Descripción de la imagen">
     <p>Corintios 13:4-5</p>
 </body>
 </html>
